add dictionary form

--- a/src/app/pages/dictionary/dictionary.component.html
+++ b/src/app/pages/dictionary/dictionary.component.html
@@ -1,9 +1,4 @@
 <div class="page-content">
   <i> {{'PLAYGROUND' | translate}} </i>
-  <div>
-    <button nz-button
-            class="create-button"><span nz-icon
-            nzType="plus"
-            nzTheme="outline"></span>Create</button>
-  </div>
+  <app-dictionary-list></app-dictionary-list>
 </div>
