--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -1,22 +1,24 @@
 <div class="page">
-  <ng-container *ngIf="!(user$ | async)">
-    <nz-spin nzSimple></nz-spin>
-  </ng-container>
-  <ng-container *ngIf="user$ | async as user">
-    <ng-container>Email: {{ user.email }}</ng-container>
-    <br />
-    <ng-container>Name: {{ user.name }}</ng-container>
-    <br />
-    <ng-container>Nick name: {{ user.nickname }}</ng-container>
-    <br />
-    <ng-container>Avatar:</ng-container>
-    <img loading="eager"
-         [style.height.rem]="4"
-         [style.width.rem]="4"
-         [style.border-radius.%]="50"
-         [src]="user.picture"
-         alt="Avatar" />
-    <br />
-    <ng-container>Updated at: {{ user.updated_at | date: 'hh:mm dd/MM/yyyy' }}</ng-container>
+  <ng-container *ngIf="(vm$ | async) as vm">
+    <ng-container *ngIf="vm.isLoading; else profileTemplate">
+      <nz-spin nzSimple></nz-spin>
+    </ng-container>
+    <ng-template #profileTemplate>
+      <ng-container>Email: {{ vm.profile.email }}</ng-container>
+      <br />
+      <ng-container>Name: {{ vm.profile.name }}</ng-container>
+      <br />
+      <ng-container>Nick name: {{ vm.profile.nickname }}</ng-container>
+      <br />
+      <ng-container>Avatar:</ng-container>
+      <img loading="eager"
+           [style.height.rem]="4"
+           [style.width.rem]="4"
+           [style.border-radius.%]="50"
+           [src]="vm.profile.picture"
+           alt="Avatar" />
+      <br />
+      <ng-container>Updated at: {{ vm.profile.updated_at | date: 'hh:mm dd/MM/yyyy' }}</ng-container>
+    </ng-template>
   </ng-container>
 </div>
