--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.scss
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.scss
@@ -12,3 +12,12 @@
   opacity: 0.8;
   cursor: pointer;
 }
+
+.delete-button {
+  color: $red;
+  transition: $transition;
+}
+.delete-button:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
