--- a/src/app/pages/dictionary/dictionary-form/dictionary-form.component.html
+++ b/src/app/pages/dictionary/dictionary-form/dictionary-form.component.html
@@ -1,11 +1,39 @@
 <nz-drawer [nzClosable]="true"
            [nzVisible]="(isVisibleForm$ | async)!"
            nzPlacement="right"
-           nzTitle="Basic Drawer"
+           [nzTitle]="'ACTION.CREATE' | translate"
            (nzOnClose)="onClose()">
   <ng-container *nzDrawerContent>
-    <p>Some contents...</p>
-    <p>Some contents...</p>
-    <p>Some contents...</p>
+    <form nz-form
+          [formGroup]="dictionaryForm"
+          [nzLayout]="'vertical'">
+      <div nz-row
+           [nzGutter]="16">
+        <div nz-col
+             nzSpan="12">
+          <nz-form-item>
+            <nz-form-label nzRequired
+                           nzFor="display">{{'DICTIONARY.DISPLAY' | translate }}</nz-form-label>
+            <nz-form-control [nzErrorTip]="errorDisplay">
+              <input nz-input
+                     placeholder="{{ 'INPUT.PLACE_HOLDER' | translate }}"
+                     id="display"
+                     formControlName="display">
+              <ng-template #errorDisplay
+                           let-control>
+                <ng-container *ngIf="control.touched && control.hasError('required')">
+                  {{ 'INPUT.PLACE_HOLDER' | translate }}
+                </ng-container>
+              </ng-template>
+            </nz-form-control>
+          </nz-form-item>
+        </div>
+
+
+      </div>
+    </form>
+    <button [disabled]="courseForm.invalid"
+            nz-button
+            (click)="onSubmit()">Create</button>
   </ng-container>
 </nz-drawer>
