--- a/src/app/pages/course/course-list/course-list.component.html
+++ b/src/app/pages/course/course-list/course-list.component.html
@@ -26,9 +26,9 @@
           </div>
           <div>
             <strong>
-              {{'COURSE.CREATED' | translate }}:</strong> {{ course.createdDate | date: 'hh:mm:ss dd/MM/yyyy'}}
+              {{'CREATED' | translate }}:</strong> {{ CREATEDDate | date: 'hh:mm:ss dd/MM/yyyy'}}
           </div>
-          <!-- <div><strong>{{'COURSE.CREATED_BY' | translate }}:</strong> {{ course.createdBy }}</div> -->
+          <!-- <div><strong>{{'CREATED_BY' | translate }}:</strong> {{ CREATEDBy }}</div> -->
           <button nz-button
                   nz-popconfirm
                   [nzPopconfirmTitle]="'CONFIRM_DELETE' | translate"
