--- a/src/app/pages/dictionary/dictionary-form/dictionary-form.component.html
+++ b/src/app/pages/dictionary/dictionary-form/dictionary-form.component.html
@@ -68,6 +68,30 @@
             </nz-form-control>
           </nz-form-item>
         </div>
+
+        <div nz-col
+             nzSpan="12">
+          <nz-form-item>
+            <nz-form-label nzRequired
+                           nzFor="hsk">HSK</nz-form-label>
+            <nz-form-control [nzErrorTip]="errorHsk">
+              <nz-select formControlName="hsk"
+                         required
+                         ngModel="hsk1">
+                <nz-option nzValue="hsk1"
+                           nzLabel="HSK 1"></nz-option>
+                <nz-option nzValue="hsk2"
+                           nzLabel="HSK 2"></nz-option>
+              </nz-select>
+              <ng-template #errorHsk
+                           let-control>
+                <ng-container *ngIf="control.touched && control.hasError('required')">
+                  {{ 'SELECT.PLACE_HOLDER' | translate }}
+                </ng-container>
+              </ng-template>
+            </nz-form-control>
+          </nz-form-item>
+        </div>
       </div>
     </form>
     <button [disabled]="dictionaryForm.invalid"
