--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
@@ -1,5 +1,6 @@
 <div>
   <button nz-button
+          nzSize="large"
           class="create-button"
           (click)="onShowForm()"><span nz-icon
           nzType="plus"
@@ -8,12 +9,11 @@
 <ng-container *ngIf="(vm$ | async) as vm">
   <nz-table [style.margin-top.rem]="'0.5'"
             #virtualTable
-            [nzBordered]="false"
             [nzVirtualItemSize]="25"
             [nzVirtualForTrackBy]="trackByIndex"
             [nzFrontPagination]="false"
             [nzShowPagination]="false"
-            [nzScroll]="{ x: 'calc(70vw - 32px)', y: 'calc(75vh - 240px)' }"
+            [nzScroll]="{ x: 'calc(70vw - 32px)', y: 'calc(75vh - 220px)' }"
             [nzLoading]="vm.isLoading"
             [nzData]="vm.words">
     <thead>
@@ -21,10 +21,11 @@
         <th nzWidth="120px">{{ 'DICTIONARY.DISPLAY' | translate }}</th>
         <th nzWidth="120px"
             [nzSortOrder]="'ascend'"
-            [nzSortFn]="sortFn">{{ 'DICTIONARY.PINYIN' | translate }}</th>
+            [nzSortFn]="sortPinyin">{{ 'DICTIONARY.PINYIN' | translate }}</th>
         <th nzWidth="240px">{{ 'DICTIONARY.DEFINE' | translate }}</th>
-        <th nzWidth="120px">{{ 'CREATED' | translate }}</th>
-        <th nzWidth="120px">{{ 'CREATED_BY' | translate }}</th>
+        <th nzWidth="80px">HSK</th>
+        <th nzWidth="200px">{{ 'CREATED' | translate }}</th>
+        <!-- <th nzWidth="120px">{{ 'CREATED_BY' | translate }}</th> -->
         <th nzWidth="40px"></th>
       </tr>
     </thead>
@@ -36,8 +37,9 @@
           <td>{{ data.display }}</td>
           <td>{{ data.pinyin }}</td>
           <td>{{ data.define }}</td>
+          <td>{{ data.hsk }}</td>
           <td>{{ data.createdDate | date: 'hh:mm:ss dd/MM/yyyy' }}</td>
-          <td>{{ data.createdBy }}</td>
+          <!-- <td>{{ data.createdBy }}</td> -->
           <td>
             <span nz-popconfirm
                   [nzPopconfirmTitle]="'CONFIRM_DELETE' | translate"
