--- a/src/app/pages/dictionary/dictionary-form/dictionary-form.component.html
+++ b/src/app/pages/dictionary/dictionary-form/dictionary-form.component.html
@@ -75,8 +75,7 @@
                            nzFor="hsk">HSK</nz-form-label>
             <nz-form-control [nzErrorTip]="errorHsk">
               <nz-select formControlName="hsk"
-                         required
-                         ngModel="hsk1">
+                         required>
                 <nz-option nzValue="hsk1"
                            nzLabel="HSK 1"></nz-option>
                 <nz-option nzValue="hsk2"
