--- a/src/app/shared/table/table.component.scss
+++ b/src/app/shared/table/table.component.scss
@@ -2,22 +2,23 @@
 
 ::ng-deep {
   .ant-table.ant-table-small {
-    font-size: 1rem;
+    font-family: sans-serif, monospace;
   }
   .ant-table {
-    color: #000;
-    font-family: sans-serif, monospace;
+    color: $black;
+    // background: $white;
     font-weight: 300;
     letter-spacing: 1px;
     font-display: fall-back;
-  }
-  .ant-table-container {
-    border-radius: 5rem;
+    td.ant-table-cell-fix-left,
+    td.ant-table-cell-fix-right {
+      // background: $white;
+    }
   }
   .ant-table-thead > tr > th {
-    background: #e8e8e8;
+    background: $white;
   }
   .ant-table-thead th.ant-table-column-sort {
-    background: #e8e8e8;
+    background: $white;
   }
 }
